# API_openai

./: pyproject.toml
Programme/: main.py  script.py
